--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <table cellspacing="23">
         <tr>
-            <td><img src="/CV/Profile pic.jpg" height="300" width="300" alt="Vidushi"></td>
+            <td><img src="Profile pic.jpg" height="300" width="300" alt="Vidushi"></td>
             <td>
                 <h1><u>Vidushi Tandon</u></h1>
                 <strong>Student at:<a href="https://nitrkl.ac.in/" target="_blank"> National Institue of Technology
